// Copyright (C) 2016 Nicolas Lamirault <nicolas.lamirault@gmail.com>

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//     http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax="proto3";

package pb;

// League service defines the public APIs for leagues.
service LeagueService {

  // GetLeagues returns all available League
  rpc GetLeagues(GetLeaguesRequest) returns (GetLeaguesResponse);

  // CreateLeague creates a new league
  rpc CreateLeague(CreateLeagueRequest) returns (CreateLeagueResponse);

  // GetLeague return a league
  rpc GetLeague(GetLeagueRequest) returns (GetLeagueResponse);

}

// League define a pelota league
message League {
  string name = 1;
  string website = 2;
}

message GetLeaguesRequest {
  string name = 1;
}

message GetLeaguesResponse {
  repeated League leagues = 1;
}


message CreateLeagueResponse {
  int32 code = 1;
  League league = 2;
}

message CreateLeagueRequest {
  string name = 1;
  string website = 2;
}


message GetLeagueRequest {
  string name = 1;
}

message GetLeagueResponse {
  League league = 1;
}
